--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -7,13 +7,13 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <title>Document</title>
+    <title>Hackabury 2025: Mankar Fanclub Submission</title>
   </head>
   <body>
     <header>
       <nav class="navbar navbar-expand-lg bg-info">
         <div class="container-fluid">
-          <a class="navbar-brand text-light" href="#">Navbar</a>
+          <a class="navbar-brand text-light" href="#">Navigation Bar</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -46,25 +46,52 @@
                   data-bs-toggle="dropdown"
                   aria-expanded="false"
                 >
-                  Dropdown
+                  Dropdown Navigation Menu
                 </a>
                 <ul class="dropdown-menu bg-info">
                   <li>
-                    <a class="dropdown-item bg-info text-light" href="#"
-                      >Action</a
+                    <a class="dropdown-item bg-info text-light" href="/"
+                      >Information Section</a
                     >
                   </li>
+
                   <li>
-                    <a class="dropdown-item bg-info text-light" href="#"
-                      >Another action</a
+                    <a class="dropdown-item bg-info text-light" href="/emailscanner"
+                      >Email Scanner Section</a
                     >
                   </li>
+
+                  <li>
+                    <a class="dropdown-item bg-info text-light" href="/quiz"
+                      >Quiz Section</a
+                    >
+                  </li>
+
+                  <li>
+                    <a class="dropdown-item bg-info text-light" href="/badwords"
+                      >Bad Words Section</a
+                    >
+                  </li>
+
+                  <li>
+                    <a class="dropdown-item bg-info text-light" href="/guidance"
+                      >Guidance Section</a
+                    >
+                  </li>
+
+                  <li>
+                    <a class="dropdown-item bg-info text-light" href="https://benjaminalbert387.github.io/hackabury2025/src/templates/uRLScanner.html"
+                    >URL Scanner</a
+                    >
+                  </li>
+
                   <li><hr class="dropdown-divider" /></li>
                   <li>
                     <a class="dropdown-item bg-info text-light" href="#"
                       >Something else here</a
                     >
                   </li>
+                  
                 </ul>
               </li>
               <li class="nav-item">
@@ -86,6 +113,21 @@
         </div>
       </nav>
     </header>
+    <h1>Welcome! This is our submission for Barclays Life Skills (Hackabury 2025) </h1>
+    <p>Use the mobile friendly navigation bar and explore the different sections of the website. </p>
+    <img src="https://benjaminalbert387.github.io/hackabury2025/barclays_life_skills_logo.png" alt="Barclays Life Skills Logo" width="375" height="250">
+
+    <h1>Clickable Icons</h1>
+    <p>If you don't want to use the navigation bar, you can click on the icons below.</p>
+
+    <a href="./quiz.html">
+        <img src=
+        "https://benjaminalbert387.github.io/hackabury2025/Icons/Quiz_Normal.png"
+            alt="Click to visit the Big Quiz!">
+    </a>
+    
+    <!-- Keep Scripts Under Body so loads after page better loading practice if not necessary to render before page loads 
+     which means u need to add to head to render script before loading rendering page. -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
