added header and footer to every page

--- a/src/templates/information copy.html
+++ b/src/templates/information copy.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+{% include "header.html" %}
+<title>information</title>
 </head>
 <body>
     <h1>Take Five!</h1>
@@ -48,4 +43,5 @@
 
     
 </body>
+{% include "footer.html" %}
 </html>
