--- a/src/templates/information.html
+++ b/src/templates/information.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+{% include "header.html" %}
+<title>information</title>
 </head>
 <body>
     <h1>Take Five!</h1>
@@ -15,4 +10,5 @@
         <li>Protect: Don't bottle it up. Contact your bank if you think you've fallen for a scam. The sooner, the better.</li>
         <li> <a href="https://www.actionfraud.police.uk/">The Action Fraud UK Website</a> </li>
 </body>
+{% include "footer.html" %}
 </html>
