--- a/src/templates/emailscanner.html
+++ b/src/templates/emailscanner.html
@@ -1,11 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-</head>
+{% include "header.html" %}
+<title>Email Scanner</title>
+</header>
 <body>
     <form action="/scan" method="POST">
         <input type="text" id="inputtext" placeholder="Paste your email into here">
@@ -41,4 +36,5 @@
         */
     </script>
 </body>
+{% include "footer.html" %}
 </html>
