--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,7 +1,118 @@
-{% include "header.html" %}
-<title>home</title>
-</head>
-  <body class="bg-light">
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <title>Hackabury 2025: Mankar Fanclub Submission</title>
+  </head>
+  <body>
+    <header>
+      <nav class="navbar navbar-expand-lg bg-info">
+        <div class="container-fluid">
+          <a class="navbar-brand text-light" href="#">Navigation Bar</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a
+                  class="nav-link active text-light"
+                  aria-current="page"
+                  href="#"
+                  >Home</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-light" href="#">Link</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle text-light"
+                  href="#"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  Dropdown Navigation Menu
+                </a>
+                <ul class="dropdown-menu bg-info">
+                  <li>
+                    <a class="dropdown-item bg-info text-light" href="/information"
+                      >Information Section</a
+                    >
+                  </li>
+
+                  <li>
+                    <a class="dropdown-item bg-info text-light" href="/emailscanner"
+                      >Email Scanner Section</a
+                    >
+                  </li>
+
+                  <li>
+                    <a class="dropdown-item bg-info text-light" href="/quiz"
+                      >Quiz Section</a
+                    >
+                  </li>
+
+                  <li>
+                    <a class="dropdown-item bg-info text-light" href="/badwords"
+                      >Bad Words Section</a
+                    >
+                  </li>
+
+                  <li>
+                    <a class="dropdown-item bg-info text-light" href="/guidance"
+                      >Guidance Section</a
+                    >
+                  </li>
+
+                  <li>
+                    <a class="dropdown-item bg-info text-light" href="https://benjaminalbert387.github.io/hackabury2025/src/templates/uRLScanner.html"
+                    >URL Scanner</a
+                    >
+                  </li>
+
+                  <li><hr class="dropdown-divider" /></li>
+                  <li>
+                    <a class="dropdown-item bg-info text-light" href="#"
+                      >Something else here</a
+                    >
+                  </li>
+                  
+                </ul>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link disabled text-light">Disabled</a>
+              </li>
+            </ul>
+            <form class="d-flex" role="search">
+              <input
+                class="form-control me-2"
+                type="search"
+                placeholder="Search"
+                aria-label="Search"
+              />
+              <button class="btn btn-outline-light" type="submit">
+                Search
+              </button>
+            </form>
+          </div>
+        </div>
+      </nav>
+    </header>
     <h1>Welcome! This is our submission for Barclays Life Skills (Hackabury 2025) </h1>
     <p>Use the mobile friendly navigation bar and explore the different sections of the website. </p>
     <img src="https://benjaminalbert387.github.io/hackabury2025/barclays_life_skills_logo.png" alt="Barclays Life Skills Logo" width="375" height="250">
@@ -9,7 +120,7 @@
     <h1>Clickable Icons</h1>
     <p>If you don't want to use the navigation bar, you can click on the icons below.</p>
 
-    <a href="./quiz.html">
+    <a href="/quiz">
         <img src=
         "https://benjaminalbert387.github.io/hackabury2025/Icons/Quiz_Normal.png"
             alt="Click to visit the Big Quiz!">
@@ -19,5 +130,4 @@
      which means u need to add to head to render script before loading rendering page. -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
-{% include "footer.html" %}
 </html>
