--- a/src/templates/information.html
+++ b/src/templates/information.html
@@ -1,5 +1,10 @@
-{% include "header.html" %}
-<title>information</title>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Information Section</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 </head>
 <body>
     <h1>Take Five!</h1>
@@ -54,5 +59,4 @@
 </a>
     
 </body>
-{% include "footer.html" %}
 </html>
